2002-07-18  Mark Wielaard  <mark@klomp.org>

	* java/text/DecimalFormat/parse.java: rename parse() to parseIt() to
	get rid of compiler warnings.

2002-07-16  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/StreamTokenizer/WordWhiteChars.java: New test for
	resetting chars.

2002-07-12  Mark Wielaard  <mark@klomp.org>

	* choose: Also check in in/exclusion of javax.* tests, don't look
	for com.* tests.

2002-07-05  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/Class/reflect.java (test): Check for
	getMethod with superinterface.

2002-07-02  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/text/MessageFormat/format.java: Added new test
	for Classpath bug.  From David Hovemeyer <daveho@cs.umd.edu>.

2002-06-18  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/Class/ClassTest.java (test_getSuperclass):
	Fix typos.

	* gnu/testlet/java/lang/Class/ClassTest.java (test_getSuperclass):
	Test interface, void, and a primitive type.

	* gnu/testlet/java/io/BufferedReader/boundary.java (test): mark()
	doesn't reset read pointer.

2002-06-13  Tom Tromey  <tromey@redhat.com>

	* Makefile.in: Rebuilt.
	* Makefile.am (check-local): Set CLASSPATH.
	From Guillame Audeon.

	From Timothy Stack:
	* gnu/testlet/java/io/BufferedByteOutputStream/interrupt.java
	(getCount): New method
	(test): Use it.

	* gnu/testlet/java/io/PrintStream/subclass.java (subclass): Don't
	pass `null' to superclass constructor.  From Dalibor Topic.

	* gnu/testlet/java/lang/Float/FloatTest.java
	(test_shortbyteValue): Fixed cast to byte of `400'.
	* gnu/testlet/java/lang/Double/DoubleTest.java
	(test_shortbyteValue): Fixed cast to byte of `400'.

2002-06-12  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/io/File/jdk11.java (test): Added test for File
	with empty path.

2002-05-13  Tom Tromey  <tromey@redhat.com>

	* configure, Makefile.in: Rebuilt.
	* configure.in: Invoke AC_PROG_CC, AM_PROG_GCJ.
	* Makefile.am (SimpleTestHarness_LINK): Removed.